# recipe-book-bot-advanced-python-2026

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
.github/workflows/: ci.yml  cloudflare-pages.yml  pages.yml
deploy/: cloudflare-pages.md
docs/: api-reference.html  index.html
docs/assets/: api-evidence.json  api-reference.js  app.js  styles.css
migrations/: 0001_schema.sql  0002_seed.sql  0003_bulk_recipes.sql  0004_dashboard_auth.sql
src/recipe_book_bot/: __init__.py  __main__.py  cli.py  config.py  db.py  demo.py  formatters.py  models.py  schemas.py  seed.py  services.py
src/recipe_book_bot/bot/: app.py  handlers.py  keyboards.py
src/worker/: env.ts  http.ts  index.ts  repository.ts  telegram.ts  validation.ts
tests/: conftest.py  test_bot_handlers.py  test_cli_and_app.py  test_config_db_schema_service.py  test_demo.py  test_services.py  web_api_contract.test.mjs
tools/: generate_bulk_recipes_migration.py
